--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_security_pin.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_security_pin.xml
@@ -39,7 +39,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,7 +71,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -87,7 +87,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -119,7 +119,7 @@
             android:layout_height="40dp"
             android:background="@drawable/circle_border"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberSigned"
             android:padding="5dp"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
