--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_history.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_history.xml
@@ -51,7 +51,7 @@
             android:layout_width="105dp"
             android:layout_height="144dp"
             android:background="#DFF7E2"
-            android:visibility="visible"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="@+id/rvListHistory"
             app:layout_constraintTop_toBottomOf="@+id/tvFilterKategori">
 
