--- a/Menghitung_Mimpi/app/src/main/res/layout/history_item.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/history_item.xml
@@ -2,16 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutItem"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:background="@drawable/rounded_bg_white">
 
     <ImageView
         android:id="@+id/ivKategoriHistory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/history_menikah" />
@@ -23,7 +25,12 @@
         android:layout_marginStart="16dp"
         android:text="tvKategoriHistory"
         android:textColor="#000000"
+        android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toEndOf="@+id/ivKategoriHistory"
-        app:layout_constraintTop_toTopOf="@+id/ivKategoriHistory" />
+        app:layout_constraintTop_toTopOf="@+id/ivKategoriHistory"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
