--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_profile.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_profile.xml
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout23">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutSyaratKetentuan"
+            android:id="@+id/layoutLogout"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="12dp"
@@ -84,7 +84,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_marginStart="16dp"
-                android:src="@drawable/syarat_ketentuan_icon"
+                android:src="@drawable/logout"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -94,7 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:text="Syarat Ketentuan"
+                android:text="Log Out"
                 android:textColor="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imageView34"
